--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+#IMPORTANT: The .env file is included in the repository temporarily for this technical test to facilitate installation and configuration. 
+#It is intended for private use only, and the repository will be deleted after the test.
+
 # Database configuration
 DATABASE_URL=postgresql+psycopg2://santiago:test1234@db/patientdb
 POSTGRES_USER=santiago
